changed rc and jc back to what they were before, restarting debugging process